Updated layer symbology, title, pane overflow, and layer symbology/legend items

--- a/WebApp/public/index.html
+++ b/WebApp/public/index.html
@@ -38,7 +38,7 @@
                 <img id="logo" class="ImageResizeLeft" src="PSU.png">
             </div>
             <div class="center title-flex">
-                <div id="titleText">Community Wildfire Protection Plan Database</div>
+                <div id="titleText">Community Wildfire Protection Plan Repository</div>
             </div>
             <div id="image-placeholderRight">
                 <img id="logo" class="ImageResizeRight" src="OSU.png">
