Updated file limits in server, the Tutorial widget, pop ups, and the boundary area calculation

--- a/WebApp/public/index.html
+++ b/WebApp/public/index.html
@@ -27,7 +27,7 @@
     <div id="loadingScreen">
         <div>
             <div class="spinner"></div>
-            <p>Loading CWPP Database...</p>
+            <p>Loading CWPP Repository...</p>
         </div>
     </div>
 
